# RayTracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
camera/: camera.h
demos/: demo.h  playground.h  room.h  stage.h  texture_demo.h
hitable/: bvhnode.h  cylinder.h  hitable.h  hitablelist.h  moving_sphere.h  plane.h  plate.h  polygon.h  rectangle.h  sphere.h  transformation.h  world.h
material/: dielectric.h  diffuse_light.h  lambertian.h  material.h  metal.h
texture/: checker_texture.h  constant_texture.h  image_texture.h  noise_texture.h  texture.h
utils/: boundingbox.h  noise.h  objloader.h  pdf.h  ray.h  sample.h  stb_image_load.h  utils.h  vec2.h  vec3.h
